--- a/samples-and-tests/restriction-samples/app/views/Unrestricted/index.html
+++ b/samples-and-tests/restriction-samples/app/views/Unrestricted/index.html
@@ -6,4 +6,8 @@
     <li><a href="@{NegationSample.index()}">Negation samples</a></li>
     <li><a href="@{ExternalRestrictionSample.index()}">External restriction samples</a></li>
     <li><a href="@{TagRestrictions.index()}">Tag restriction samples</a></li>
+    <li><a href="@{RestrictedResourceMethodsSample.index()}">Restricted resource method samples</a></li>
+    <li><a href="@{AllowedRestrictedResourceClassSample.index()}">Restricted resource class sample - allow</a></li>
+    <li><a href="@{DenyRestrictedResourceClassSample.index()}">Restricted resource class sample - deny</a></li>
+    <li><a href="@{RestrictedResourceTagRestrictions.index()}">Restricted resource tag samples</a></li>
 </ul>
