--- a/app/views/tags/deadbolt/restrictedResource.html
+++ b/app/views/tags/deadbolt/restrictedResource.html
@@ -1,6 +1,6 @@
 %{
     boolean allowUnspecified = _allowUnspecified != null && _allowUnspecified;
-    boolean allowAccess = controllers.deadbolt.Deadbolt.checkRestrictedResource(_resourceKeys, allowUnspecified)
+    boolean allowAccess = controllers.deadbolt.Deadbolt.checkRestrictedResource(_resourceKeys, _resourceParameters, allowUnspecified)
 }%
 #{if allowAccess}
     #{doBody /}
